--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,8 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-<div class="window" style="overflow-y:scroll;">
+  
+<div class="window" >
   <app-root></app-root>
 </div>
 </body>
